fix: height issue on mobile devices

--- a/components/Content/Content.css
+++ b/components/Content/Content.css
@@ -1,6 +1,6 @@
 .main-wrapper {
   width: 100vw;
-  min-height: 100vh;
+  min-height: 100dvh;
 
   background-color: black;
   color: white;
